[project]
name = "lethal-fpbot"
version = "0.1.0"
description = "Lethal FunPay Bot — SaaS automation для продаж на FunPay"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["__pycache__", ".venv", "venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # длинные строки — разрешаем (форматирование решит)
    "B008",  # вызовы в дефолтах — нужно для aiogram-фильтров
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "E402"]
